--- a/src/typebase.sass
+++ b/src/typebase.sass
@@ -78,6 +78,7 @@ table
   td, th
     padding: 0
     line-height: $baseLineHeight * $baseFontSize - 0px
+    vertical-align: top
 
 /* Code blocks */
 code
@@ -88,7 +89,7 @@ code
 .lead
   font-size: $scale * 1rem
 
-/* Hug a the block above you */
+/* Hug the block above you */
 .hug
   margin-top: 0
 
