--- a/src/typebase.scss
+++ b/src/typebase.scss
@@ -95,6 +95,7 @@ td,
 th {
     padding: 0;
     line-height: $baseLineHeight * $baseFontSize - 0px;
+    vertical-align: top;
 }
 /* Code blocks */
 
@@ -107,7 +108,7 @@ code {
 .lead {
     font-size: $scale * 1rem;
 }
-/* Hug a the block above you */
+/* Hug the block above you */
 
 .hug {
     margin-top: 0;
